Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.13-dev-254-ge5bffe49da21f5faf2a88a0983ad4876d388e0ea
Description
With commit https://git.reactos.org/?p=reactos.git;a=commit;h=e5bffe49da21f5faf2a88a0983ad4876d388e0ea this feature is broken.
Steps to reproduce:
-Compile ReactOS with said commit included
-Install
-Break into the debugger with Tab+K
-type "step" or "next"
-these commands just act like you would type "cont"
Expected behaviour:
Stepping through single instructions