[0.4.13] Revert "[NTOS:KDBG] Use CONTEXT instead of KTRAP_FRAME" CORE-16231

This reverts guilty commit 0.4.13-dev-254-g
e5bffe49da21f5faf2a88a0983ad4876d388e0ea.

To repair step/next commands in GCC Kernel Debugger

https://reactos.org/testman/compare.php?ids=69388,69392 VBox on master
https://reactos.org/testman/compare.php?ids=69389,69393 KVM on master

cherry picked from commit 0.4.14-dev-56-g
739037675374f4c4c125caf844b31d04c00634e7